// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FileUpload > renders with accept correctly 1`] = `
"<div class="relative flex flex-col gap-2 items-start">
  <div role="button" data-dragging="false" class="w-full bg-default border border-default flex flex-col gap-2 items-stretch justify-center rounded-lg focus-visible:outline-2 transition-[background] p-4 text-sm border-dashed data-[dragging=true]:bg-elevated/25 focus-visible:outline-primary hover:bg-elevated/25" tabindex="0">
    <!--v-if-->
    <div class="flex flex-col items-center justify-center text-center px-4 py-3"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="text-muted shrink-0"></svg></span>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!--v-if--><input type="file" accept="image/*" hidden="">
</div>"
`;

exports[`FileUpload > renders with actions slot correctly 1`] = `
"<div class="relative flex flex-col gap-2 items-start">
  <div role="button" data-dragging="false" class="w-full bg-default border border-default flex flex-col gap-2 items-stretch justify-center rounded-lg focus-visible:outline-2 transition-[background] p-4 text-sm border-dashed data-[dragging=true]:bg-elevated/25 focus-visible:outline-primary hover:bg-elevated/25" tabindex="0">
    <!--v-if-->
    <div class="flex flex-col items-center justify-center text-center px-4 py-3"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="text-muted shrink-0"></svg></span>
      <!--v-if-->
      <!--v-if-->
      <div class="flex flex-wrap gap-1.5 shrink-0 mt-4">Actions slot</div>
    </div>
  </div>
  <div class="flex flex-col w-full gap-2">
    <div class="relative text-xs px-2.5 py-1.5 gap-1.5 min-w-0 flex items-center border border-default rounded-md w-full"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><img role="img" src="blob:nodedata:478cffef-da4f-462b-804e-0611490d9663" width="32" height="32" class="h-full w-full rounded-[inherit] object-cover"></span>
      <div class="flex flex-col min-w-0"><span class="text-default truncate">file1.txt</span><span class="text-muted truncate">3B</span></div><button type="button" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors text-sm gap-1.5 text-muted hover:text-default active:text-default disabled:text-muted aria-disabled:text-muted focus:outline-none focus-visible:ring-inset focus-visible:ring-2 focus-visible:ring-inverted p-1.5 ms-auto -mr-1.5">
        <!--v-if-->
        <!--v-if--><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="shrink-0 size-5"></svg>
      </button>
    </div>
  </div><input type="file" accept="*" hidden="">
</div>"
`;

exports[`FileUpload > renders with as correctly 1`] = `
"<section class="relative flex flex-col gap-2 items-start">
  <div role="button" data-dragging="false" class="w-full bg-default border border-default flex flex-col gap-2 items-stretch justify-center rounded-lg focus-visible:outline-2 transition-[background] p-4 text-sm border-dashed data-[dragging=true]:bg-elevated/25 focus-visible:outline-primary hover:bg-elevated/25" tabindex="0">
    <!--v-if-->
    <div class="flex flex-col items-center justify-center text-center px-4 py-3"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="text-muted shrink-0"></svg></span>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!--v-if--><input type="file" accept="*" hidden="">
</section>"
`;

exports[`FileUpload > renders with class correctly 1`] = `
"<div class="relative flex flex-col items-start w-full gap-4">
  <div role="button" data-dragging="false" class="w-full bg-default border border-default flex flex-col gap-2 items-stretch justify-center rounded-lg focus-visible:outline-2 transition-[background] p-4 text-sm border-dashed data-[dragging=true]:bg-elevated/25 focus-visible:outline-primary hover:bg-elevated/25" tabindex="0">
    <!--v-if-->
    <div class="flex flex-col items-center justify-center text-center px-4 py-3"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="text-muted shrink-0"></svg></span>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!--v-if--><input type="file" accept="*" hidden="">
</div>"
`;

exports[`FileUpload > renders with default slot correctly 1`] = `"<div class="relative flex flex-col gap-2 items-start">Default slot<input type="file" accept="*" hidden=""></div>"`;

exports[`FileUpload > renders with description correctly 1`] = `
"<div class="relative flex flex-col gap-2 items-start">
  <div role="button" data-dragging="false" class="w-full bg-default border border-default flex flex-col gap-2 items-stretch justify-center rounded-lg focus-visible:outline-2 transition-[background] p-4 text-sm border-dashed data-[dragging=true]:bg-elevated/25 focus-visible:outline-primary hover:bg-elevated/25" tabindex="0">
    <!--v-if-->
    <div class="flex flex-col items-center justify-center text-center px-4 py-3"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="text-muted shrink-0"></svg></span>
      <!--v-if-->
      <div class="text-muted mt-1">SVG, PNG, JPG or GIF (max. 2MB)</div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if--><input type="file" accept="*" hidden="">
</div>"
`;

exports[`FileUpload > renders with description slot correctly 1`] = `
"<div class="relative flex flex-col gap-2 items-start">
  <div role="button" data-dragging="false" class="w-full bg-default border border-default flex flex-col gap-2 items-stretch justify-center rounded-lg focus-visible:outline-2 transition-[background] p-4 text-sm border-dashed data-[dragging=true]:bg-elevated/25 focus-visible:outline-primary hover:bg-elevated/25" tabindex="0">
    <!--v-if-->
    <div class="flex flex-col items-center justify-center text-center px-4 py-3"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="text-muted shrink-0"></svg></span>
      <!--v-if-->
      <div class="text-muted mt-1">Description slot</div>
      <!--v-if-->
    </div>
  </div>
  <div class="flex flex-col w-full gap-2">
    <div class="relative text-xs px-2.5 py-1.5 gap-1.5 min-w-0 flex items-center border border-default rounded-md w-full"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><img role="img" src="blob:nodedata:ce6e1e95-ae86-40c2-ab50-0a176265665b" width="32" height="32" class="h-full w-full rounded-[inherit] object-cover"></span>
      <div class="flex flex-col min-w-0"><span class="text-default truncate">file1.txt</span><span class="text-muted truncate">3B</span></div><button type="button" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors text-sm gap-1.5 text-muted hover:text-default active:text-default disabled:text-muted aria-disabled:text-muted focus:outline-none focus-visible:ring-inset focus-visible:ring-2 focus-visible:ring-inverted p-1.5 ms-auto -mr-1.5">
        <!--v-if-->
        <!--v-if--><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="shrink-0 size-5"></svg>
      </button>
    </div>
  </div><input type="file" accept="*" hidden="">
</div>"
`;

exports[`FileUpload > renders with disabled correctly 1`] = `
"<div class="relative flex flex-col gap-2 items-start">
  <div role="button" data-dragging="false" class="w-full bg-default border border-default flex flex-col gap-2 items-stretch justify-center rounded-lg focus-visible:outline-2 transition-[background] p-4 text-sm border-dashed data-[dragging=true]:bg-elevated/25 cursor-not-allowed opacity-75 focus-visible:outline-primary" tabindex="0">
    <!--v-if-->
    <div class="flex flex-col items-center justify-center text-center px-4 py-3"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="text-muted shrink-0"></svg></span>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!--v-if--><input type="file" accept="*" disabled="" hidden="">
</div>"
`;

exports[`FileUpload > renders with disabled correctly 2`] = `
"<div class="relative flex flex-col gap-2 items-start">
  <div role="button" data-dragging="false" class="w-full bg-default border border-default flex flex-col gap-2 items-stretch justify-center rounded-lg focus-visible:outline-2 transition-[background] p-4 text-sm border-dashed data-[dragging=true]:bg-elevated/25 cursor-not-allowed opacity-75 focus-visible:outline-primary" tabindex="0">
    <!--v-if-->
    <div class="flex flex-col items-center justify-center text-center px-4 py-3"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="text-muted shrink-0"></svg></span>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!--v-if--><input type="file" accept="*" disabled="" hidden="">
</div>"
`;

exports[`FileUpload > renders with file slot correctly 1`] = `
"<div class="relative flex flex-col gap-2 items-start">
  <div role="button" data-dragging="false" class="w-full bg-default border border-default flex flex-col gap-2 items-stretch justify-center rounded-lg focus-visible:outline-2 transition-[background] p-4 text-sm border-dashed data-[dragging=true]:bg-elevated/25 focus-visible:outline-primary hover:bg-elevated/25" tabindex="0">
    <!--v-if-->
    <div class="flex flex-col items-center justify-center text-center px-4 py-3"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="text-muted shrink-0"></svg></span>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <div class="flex flex-col w-full gap-2">
    <div class="relative text-xs px-2.5 py-1.5 gap-1.5 min-w-0 flex items-center border border-default rounded-md w-full">File slot</div>
  </div><input type="file" accept="*" hidden="">
</div>"
`;

exports[`FileUpload > renders with file-leading slot correctly 1`] = `
"<div class="relative flex flex-col gap-2 items-start">
  <div role="button" data-dragging="false" class="w-full bg-default border border-default flex flex-col gap-2 items-stretch justify-center rounded-lg focus-visible:outline-2 transition-[background] p-4 text-sm border-dashed data-[dragging=true]:bg-elevated/25 focus-visible:outline-primary hover:bg-elevated/25" tabindex="0">
    <!--v-if-->
    <div class="flex flex-col items-center justify-center text-center px-4 py-3"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="text-muted shrink-0"></svg></span>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <div class="flex flex-col w-full gap-2">
    <div class="relative text-xs px-2.5 py-1.5 gap-1.5 min-w-0 flex items-center border border-default rounded-md w-full">File leading slot<div class="flex flex-col min-w-0"><span class="text-default truncate">file1.txt</span><span class="text-muted truncate">3B</span></div><button type="button" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors text-sm gap-1.5 text-muted hover:text-default active:text-default disabled:text-muted aria-disabled:text-muted focus:outline-none focus-visible:ring-inset focus-visible:ring-2 focus-visible:ring-inverted p-1.5 ms-auto -mr-1.5">
        <!--v-if-->
        <!--v-if--><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="shrink-0 size-5"></svg>
      </button></div>
  </div><input type="file" accept="*" hidden="">
</div>"
`;

exports[`FileUpload > renders with file-name slot correctly 1`] = `
"<div class="relative flex flex-col gap-2 items-start">
  <div role="button" data-dragging="false" class="w-full bg-default border border-default flex flex-col gap-2 items-stretch justify-center rounded-lg focus-visible:outline-2 transition-[background] p-4 text-sm border-dashed data-[dragging=true]:bg-elevated/25 focus-visible:outline-primary hover:bg-elevated/25" tabindex="0">
    <!--v-if-->
    <div class="flex flex-col items-center justify-center text-center px-4 py-3"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="text-muted shrink-0"></svg></span>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <div class="flex flex-col w-full gap-2">
    <div class="relative text-xs px-2.5 py-1.5 gap-1.5 min-w-0 flex items-center border border-default rounded-md w-full"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><img role="img" src="blob:nodedata:b144035d-d269-4dc9-b181-5871b3aa49db" width="32" height="32" class="h-full w-full rounded-[inherit] object-cover"></span>
      <div class="flex flex-col min-w-0"><span class="text-default truncate">File name slot</span><span class="text-muted truncate">3B</span></div><button type="button" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors text-sm gap-1.5 text-muted hover:text-default active:text-default disabled:text-muted aria-disabled:text-muted focus:outline-none focus-visible:ring-inset focus-visible:ring-2 focus-visible:ring-inverted p-1.5 ms-auto -mr-1.5">
        <!--v-if-->
        <!--v-if--><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="shrink-0 size-5"></svg>
      </button>
    </div>
  </div><input type="file" accept="*" hidden="">
</div>"
`;

exports[`FileUpload > renders with file-size slot correctly 1`] = `
"<div class="relative flex flex-col gap-2 items-start">
  <div role="button" data-dragging="false" class="w-full bg-default border border-default flex flex-col gap-2 items-stretch justify-center rounded-lg focus-visible:outline-2 transition-[background] p-4 text-sm border-dashed data-[dragging=true]:bg-elevated/25 focus-visible:outline-primary hover:bg-elevated/25" tabindex="0">
    <!--v-if-->
    <div class="flex flex-col items-center justify-center text-center px-4 py-3"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="text-muted shrink-0"></svg></span>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <div class="flex flex-col w-full gap-2">
    <div class="relative text-xs px-2.5 py-1.5 gap-1.5 min-w-0 flex items-center border border-default rounded-md w-full"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><img role="img" src="blob:nodedata:34bec648-3d27-49f7-a2c3-927e6207e05c" width="32" height="32" class="h-full w-full rounded-[inherit] object-cover"></span>
      <div class="flex flex-col min-w-0"><span class="text-default truncate">file1.txt</span><span class="text-muted truncate">File size slot</span></div><button type="button" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors text-sm gap-1.5 text-muted hover:text-default active:text-default disabled:text-muted aria-disabled:text-muted focus:outline-none focus-visible:ring-inset focus-visible:ring-2 focus-visible:ring-inverted p-1.5 ms-auto -mr-1.5">
        <!--v-if-->
        <!--v-if--><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="shrink-0 size-5"></svg>
      </button>
    </div>
  </div><input type="file" accept="*" hidden="">
</div>"
`;

exports[`FileUpload > renders with file-trailing slot correctly 1`] = `
"<div class="relative flex flex-col gap-2 items-start">
  <div role="button" data-dragging="false" class="w-full bg-default border border-default flex flex-col gap-2 items-stretch justify-center rounded-lg focus-visible:outline-2 transition-[background] p-4 text-sm border-dashed data-[dragging=true]:bg-elevated/25 focus-visible:outline-primary hover:bg-elevated/25" tabindex="0">
    <!--v-if-->
    <div class="flex flex-col items-center justify-center text-center px-4 py-3"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="text-muted shrink-0"></svg></span>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <div class="flex flex-col w-full gap-2">
    <div class="relative text-xs px-2.5 py-1.5 gap-1.5 min-w-0 flex items-center border border-default rounded-md w-full"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><img role="img" src="blob:nodedata:6383e7df-fd00-4392-a36b-d3f0021a9b68" width="32" height="32" class="h-full w-full rounded-[inherit] object-cover"></span>
      <div class="flex flex-col min-w-0"><span class="text-default truncate">file1.txt</span><span class="text-muted truncate">3B</span></div>File trailing slot
    </div>
  </div><input type="file" accept="*" hidden="">
</div>"
`;

exports[`FileUpload > renders with fileDelete correctly 1`] = `
"<div class="relative flex flex-col gap-2 items-start">
  <div role="button" data-dragging="false" class="w-full bg-default border border-default flex flex-col gap-2 items-stretch justify-center rounded-lg focus-visible:outline-2 transition-[background] p-4 text-sm border-dashed data-[dragging=true]:bg-elevated/25 focus-visible:outline-primary hover:bg-elevated/25" tabindex="0">
    <!--v-if-->
    <div class="flex flex-col items-center justify-center text-center px-4 py-3"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="text-muted shrink-0"></svg></span>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <div class="flex flex-col w-full gap-2">
    <div class="relative text-xs px-2.5 py-1.5 gap-1.5 min-w-0 flex items-center border border-default rounded-md w-full"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><img role="img" src="blob:nodedata:92b843d4-b203-4987-9c9a-05d5d85233c8" width="32" height="32" class="h-full w-full rounded-[inherit] object-cover"></span>
      <div class="flex flex-col min-w-0"><span class="text-default truncate">file1.txt</span><span class="text-muted truncate">3B</span></div><button type="button" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors text-sm gap-1.5 text-primary hover:text-primary/75 active:text-primary/75 disabled:text-primary aria-disabled:text-primary focus:outline-none focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-primary p-1.5 ms-auto -mr-1.5">
        <!--v-if-->
        <!--v-if--><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="shrink-0 size-5"></svg>
      </button>
    </div>
  </div><input type="file" accept="*" hidden="">
</div>"
`;

exports[`FileUpload > renders with fileDeleteIcon correctly 1`] = `
"<div class="relative flex flex-col gap-2 items-start">
  <div role="button" data-dragging="false" class="w-full bg-default border border-default flex flex-col gap-2 items-stretch justify-center rounded-lg focus-visible:outline-2 transition-[background] p-4 text-sm border-dashed data-[dragging=true]:bg-elevated/25 focus-visible:outline-primary hover:bg-elevated/25" tabindex="0">
    <!--v-if-->
    <div class="flex flex-col items-center justify-center text-center px-4 py-3"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="text-muted shrink-0"></svg></span>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <div class="flex flex-col w-full gap-2">
    <div class="relative text-xs px-2.5 py-1.5 gap-1.5 min-w-0 flex items-center border border-default rounded-md w-full"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><img role="img" src="blob:nodedata:cdc6f6da-bb11-45bd-8b43-72cd42f69ba0" width="32" height="32" class="h-full w-full rounded-[inherit] object-cover"></span>
      <div class="flex flex-col min-w-0"><span class="text-default truncate">file1.txt</span><span class="text-muted truncate">3B</span></div><button type="button" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors text-sm gap-1.5 text-muted hover:text-default active:text-default disabled:text-muted aria-disabled:text-muted focus:outline-none focus-visible:ring-inset focus-visible:ring-2 focus-visible:ring-inverted p-1.5 ms-auto -mr-1.5">
        <!--v-if-->
        <!--v-if--><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="shrink-0 size-5"></svg>
      </button>
    </div>
  </div><input type="file" accept="*" hidden="">
</div>"
`;

exports[`FileUpload > renders with fileIcon correctly 1`] = `
"<div class="relative flex flex-col gap-2 items-start">
  <div role="button" data-dragging="false" class="w-full bg-default border border-default flex flex-col gap-2 items-stretch justify-center rounded-lg focus-visible:outline-2 transition-[background] p-4 text-sm border-dashed data-[dragging=true]:bg-elevated/25 focus-visible:outline-primary hover:bg-elevated/25" tabindex="0">
    <!--v-if-->
    <div class="flex flex-col items-center justify-center text-center px-4 py-3"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="text-muted shrink-0"></svg></span>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <div class="flex flex-col w-full gap-2">
    <div class="relative text-xs px-2.5 py-1.5 gap-1.5 min-w-0 flex items-center border border-default rounded-md w-full"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><img role="img" src="blob:nodedata:c6f95682-7596-4a8e-8654-a0eaddc9073b" width="32" height="32" class="h-full w-full rounded-[inherit] object-cover"></span>
      <div class="flex flex-col min-w-0"><span class="text-default truncate">file1.txt</span><span class="text-muted truncate">3B</span></div><button type="button" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors text-sm gap-1.5 text-muted hover:text-default active:text-default disabled:text-muted aria-disabled:text-muted focus:outline-none focus-visible:ring-inset focus-visible:ring-2 focus-visible:ring-inverted p-1.5 ms-auto -mr-1.5">
        <!--v-if-->
        <!--v-if--><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="shrink-0 size-5"></svg>
      </button>
    </div>
  </div><input type="file" accept="*" hidden="">
</div>"
`;

exports[`FileUpload > renders with files slot correctly 1`] = `
"<div class="relative flex flex-col gap-2 items-start">
  <div role="button" data-dragging="false" class="w-full bg-default border border-default flex flex-col gap-2 items-stretch justify-center rounded-lg focus-visible:outline-2 transition-[background] p-4 text-sm border-dashed data-[dragging=true]:bg-elevated/25 focus-visible:outline-primary hover:bg-elevated/25" tabindex="0">
    <!--v-if-->
    <div class="flex flex-col items-center justify-center text-center px-4 py-3"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="text-muted shrink-0"></svg></span>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <div class="flex flex-col w-full gap-2">Files slot</div><input type="file" accept="*" hidden="">
</div>"
`;

exports[`FileUpload > renders with files-bottom slot correctly 1`] = `
"<div class="relative flex flex-col gap-2 items-start">
  <div role="button" data-dragging="false" class="w-full bg-default border border-default flex flex-col gap-2 items-stretch justify-center rounded-lg focus-visible:outline-2 transition-[background] p-4 text-sm border-dashed data-[dragging=true]:bg-elevated/25 focus-visible:outline-primary hover:bg-elevated/25" tabindex="0">
    <!--v-if-->
    <div class="flex flex-col items-center justify-center text-center px-4 py-3"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="text-muted shrink-0"></svg></span>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <div class="flex flex-col w-full gap-2">
    <div class="relative text-xs px-2.5 py-1.5 gap-1.5 min-w-0 flex items-center border border-default rounded-md w-full"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><img role="img" src="blob:nodedata:af395686-e0f1-46a9-ba9c-b66c3a2fcaf1" width="32" height="32" class="h-full w-full rounded-[inherit] object-cover"></span>
      <div class="flex flex-col min-w-0"><span class="text-default truncate">file1.txt</span><span class="text-muted truncate">3B</span></div><button type="button" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors text-sm gap-1.5 text-muted hover:text-default active:text-default disabled:text-muted aria-disabled:text-muted focus:outline-none focus-visible:ring-inset focus-visible:ring-2 focus-visible:ring-inverted p-1.5 ms-auto -mr-1.5">
        <!--v-if-->
        <!--v-if--><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="shrink-0 size-5"></svg>
      </button>
    </div>
  </div>Files bottom slot<input type="file" accept="*" hidden="">
</div>"
`;

exports[`FileUpload > renders with files-top slot correctly 1`] = `
"<div class="relative flex flex-col gap-2 items-start">
  <div role="button" data-dragging="false" class="w-full bg-default border border-default flex flex-col gap-2 items-stretch justify-center rounded-lg focus-visible:outline-2 transition-[background] p-4 text-sm border-dashed data-[dragging=true]:bg-elevated/25 focus-visible:outline-primary hover:bg-elevated/25" tabindex="0">
    <!--v-if-->
    <div class="flex flex-col items-center justify-center text-center px-4 py-3"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="text-muted shrink-0"></svg></span>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>Files top slot<div class="flex flex-col w-full gap-2">
    <div class="relative text-xs px-2.5 py-1.5 gap-1.5 min-w-0 flex items-center border border-default rounded-md w-full"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><img role="img" src="blob:nodedata:7703d7d9-eeec-4e42-9183-ebafd742b1cd" width="32" height="32" class="h-full w-full rounded-[inherit] object-cover"></span>
      <div class="flex flex-col min-w-0"><span class="text-default truncate">file1.txt</span><span class="text-muted truncate">3B</span></div><button type="button" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors text-sm gap-1.5 text-muted hover:text-default active:text-default disabled:text-muted aria-disabled:text-muted focus:outline-none focus-visible:ring-inset focus-visible:ring-2 focus-visible:ring-inverted p-1.5 ms-auto -mr-1.5">
        <!--v-if-->
        <!--v-if--><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="shrink-0 size-5"></svg>
      </button>
    </div>
  </div><input type="file" accept="*" hidden="">
</div>"
`;

exports[`FileUpload > renders with icon correctly 1`] = `
"<div class="relative flex flex-col gap-2 items-start">
  <div role="button" data-dragging="false" class="w-full bg-default border border-default flex flex-col gap-2 items-stretch justify-center rounded-lg focus-visible:outline-2 transition-[background] p-4 text-sm border-dashed data-[dragging=true]:bg-elevated/25 focus-visible:outline-primary hover:bg-elevated/25" tabindex="0">
    <!--v-if-->
    <div class="flex flex-col items-center justify-center text-center px-4 py-3"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="text-muted shrink-0"></svg></span>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!--v-if--><input type="file" accept="*" hidden="">
</div>"
`;

exports[`FileUpload > renders with id correctly 1`] = `
"<div class="relative flex flex-col gap-2 items-start">
  <div role="button" data-dragging="false" class="w-full bg-default border border-default flex flex-col gap-2 items-stretch justify-center rounded-lg focus-visible:outline-2 transition-[background] p-4 text-sm border-dashed data-[dragging=true]:bg-elevated/25 focus-visible:outline-primary hover:bg-elevated/25" tabindex="0">
    <!--v-if-->
    <div class="flex flex-col items-center justify-center text-center px-4 py-3"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="text-muted shrink-0"></svg></span>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!--v-if--><input id="id" type="file" accept="*" hidden="">
</div>"
`;

exports[`FileUpload > renders with label correctly 1`] = `
"<div class="relative flex flex-col gap-2 items-start">
  <div role="button" data-dragging="false" class="w-full bg-default border border-default flex flex-col gap-2 items-stretch justify-center rounded-lg focus-visible:outline-2 transition-[background] p-4 text-sm border-dashed data-[dragging=true]:bg-elevated/25 focus-visible:outline-primary hover:bg-elevated/25" tabindex="0">
    <!--v-if-->
    <div class="flex flex-col items-center justify-center text-center px-4 py-3"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="text-muted shrink-0"></svg></span>
      <div class="font-medium text-default mt-2">Drop your image here</div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!--v-if--><input type="file" accept="*" hidden="">
</div>"
`;

exports[`FileUpload > renders with label slot correctly 1`] = `
"<div class="relative flex flex-col gap-2 items-start">
  <div role="button" data-dragging="false" class="w-full bg-default border border-default flex flex-col gap-2 items-stretch justify-center rounded-lg focus-visible:outline-2 transition-[background] p-4 text-sm border-dashed data-[dragging=true]:bg-elevated/25 focus-visible:outline-primary hover:bg-elevated/25" tabindex="0">
    <!--v-if-->
    <div class="flex flex-col items-center justify-center text-center px-4 py-3"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="text-muted shrink-0"></svg></span>
      <div class="font-medium text-default mt-2">Label slot</div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <div class="flex flex-col w-full gap-2">
    <div class="relative text-xs px-2.5 py-1.5 gap-1.5 min-w-0 flex items-center border border-default rounded-md w-full"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><img role="img" src="blob:nodedata:c24c4ada-b71a-4e9b-bc90-c19352e763a8" width="32" height="32" class="h-full w-full rounded-[inherit] object-cover"></span>
      <div class="flex flex-col min-w-0"><span class="text-default truncate">file1.txt</span><span class="text-muted truncate">3B</span></div><button type="button" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors text-sm gap-1.5 text-muted hover:text-default active:text-default disabled:text-muted aria-disabled:text-muted focus:outline-none focus-visible:ring-inset focus-visible:ring-2 focus-visible:ring-inverted p-1.5 ms-auto -mr-1.5">
        <!--v-if-->
        <!--v-if--><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="shrink-0 size-5"></svg>
      </button>
    </div>
  </div><input type="file" accept="*" hidden="">
</div>"
`;

exports[`FileUpload > renders with layout grid correctly 1`] = `
"<div class="relative">
  <div role="button" data-dragging="false" class="w-full bg-default border border-default flex flex-col gap-2 items-stretch justify-center rounded-lg focus-visible:outline-2 transition-[background] p-4 text-sm border-dashed data-[dragging=true]:bg-elevated/25 focus-visible:outline-primary hover:bg-elevated/25" tabindex="0">
    <!--v-if-->
    <div class="flex flex-col items-center justify-center text-center px-4 py-3"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="text-muted shrink-0"></svg></span>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <div class="">
    <div class="text-xs gap-1.5 absolute inset-0 p-0"><span class="inline-flex items-center justify-center select-none align-middle bg-elevated text-base shrink-0 size-full rounded-lg"><img role="img" src="blob:nodedata:170e571e-6111-4ab0-ae46-5721c9031306" width="32" height="32" class="h-full w-full rounded-[inherit] object-cover"></span>
      <div class="flex-col min-w-0 hidden"><span class="text-default truncate">file1.txt</span><span class="text-muted truncate">3B</span></div><button type="button" class="font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors text-xs gap-1 text-inverted bg-inverted hover:bg-inverted/90 active:bg-inverted/90 disabled:bg-inverted aria-disabled:bg-inverted focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-inverted absolute -top-1.5 -right-1.5 p-0 rounded-full border-2 border-bg">
        <!--v-if-->
        <!--v-if--><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="shrink-0 size-4"></svg>
      </button>
    </div>
  </div><input type="file" accept="*" hidden="">
</div>"
`;

exports[`FileUpload > renders with layout grid multiple correctly 1`] = `
"<div class="relative">
  <div role="button" data-dragging="false" class="w-full bg-default border border-default flex flex-col gap-2 items-stretch justify-center rounded-lg focus-visible:outline-2 transition-[background] p-4 text-sm border-dashed data-[dragging=true]:bg-elevated/25 focus-visible:outline-primary hover:bg-elevated/25" tabindex="0">
    <div class="grid grid-cols-2 md:grid-cols-3 gap-4 w-full">
      <div class="relative text-xs gap-1.5 p-0 aspect-square"><span class="inline-flex items-center justify-center select-none align-middle bg-elevated text-base shrink-0 size-full rounded-lg"><img role="img" src="blob:nodedata:3b4d9e12-dbf2-4c8c-bf1b-993750d1d348" width="32" height="32" class="h-full w-full rounded-[inherit] object-cover"></span>
        <div class="flex-col min-w-0 hidden"><span class="text-default truncate">file1.txt</span><span class="text-muted truncate">3B</span></div><button type="button" class="font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors text-xs gap-1 text-inverted bg-inverted hover:bg-inverted/90 active:bg-inverted/90 disabled:bg-inverted aria-disabled:bg-inverted focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-inverted absolute -top-1.5 -right-1.5 p-0 rounded-full border-2 border-bg">
          <!--v-if-->
          <!--v-if--><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="shrink-0 size-4"></svg>
        </button>
      </div>
    </div>
    <!--v-if-->
  </div>
  <!--v-if--><input type="file" accept="*" multiple="" hidden="">
</div>"
`;

exports[`FileUpload > renders with layout list correctly 1`] = `
"<div class="relative flex flex-col gap-2 items-start">
  <div role="button" data-dragging="false" class="w-full bg-default border border-default flex flex-col gap-2 items-stretch justify-center rounded-lg focus-visible:outline-2 transition-[background] p-4 text-sm border-dashed data-[dragging=true]:bg-elevated/25 focus-visible:outline-primary hover:bg-elevated/25" tabindex="0">
    <!--v-if-->
    <div class="flex flex-col items-center justify-center text-center px-4 py-3"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="text-muted shrink-0"></svg></span>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <div class="flex flex-col w-full gap-2">
    <div class="relative text-xs px-2.5 py-1.5 gap-1.5 min-w-0 flex items-center border border-default rounded-md w-full"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><img role="img" src="blob:nodedata:45e0dd49-fb38-4fae-b87a-18216bf51ec1" width="32" height="32" class="h-full w-full rounded-[inherit] object-cover"></span>
      <div class="flex flex-col min-w-0"><span class="text-default truncate">file1.txt</span><span class="text-muted truncate">3B</span></div><button type="button" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors text-sm gap-1.5 text-muted hover:text-default active:text-default disabled:text-muted aria-disabled:text-muted focus:outline-none focus-visible:ring-inset focus-visible:ring-2 focus-visible:ring-inverted p-1.5 ms-auto -mr-1.5">
        <!--v-if-->
        <!--v-if--><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="shrink-0 size-5"></svg>
      </button>
    </div>
  </div><input type="file" accept="*" hidden="">
</div>"
`;

exports[`FileUpload > renders with layout list multiple correctly 1`] = `
"<div class="relative flex flex-col gap-2 items-start">
  <div role="button" data-dragging="false" class="w-full bg-default border border-default flex flex-col gap-2 items-stretch justify-center rounded-lg focus-visible:outline-2 transition-[background] p-4 text-sm border-dashed data-[dragging=true]:bg-elevated/25 focus-visible:outline-primary hover:bg-elevated/25" tabindex="0">
    <!--v-if-->
    <div class="flex flex-col items-center justify-center text-center px-4 py-3"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="text-muted shrink-0"></svg></span>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <div class="flex flex-col w-full gap-2">
    <div class="relative text-xs px-2.5 py-1.5 gap-1.5 min-w-0 flex items-center border border-default rounded-md w-full"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><img role="img" src="blob:nodedata:8ff070bc-044c-419c-a134-bb95747509ea" width="32" height="32" class="h-full w-full rounded-[inherit] object-cover"></span>
      <div class="flex flex-col min-w-0"><span class="text-default truncate">file1.txt</span><span class="text-muted truncate">3B</span></div><button type="button" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors text-sm gap-1.5 text-muted hover:text-default active:text-default disabled:text-muted aria-disabled:text-muted focus:outline-none focus-visible:ring-inset focus-visible:ring-2 focus-visible:ring-inverted p-1.5 ms-auto -mr-1.5">
        <!--v-if-->
        <!--v-if--><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="shrink-0 size-5"></svg>
      </button>
    </div>
  </div><input type="file" accept="*" multiple="" hidden="">
</div>"
`;

exports[`FileUpload > renders with leading slot correctly 1`] = `
"<div class="relative flex flex-col gap-2 items-start">
  <div role="button" data-dragging="false" class="w-full bg-default border border-default flex flex-col gap-2 items-stretch justify-center rounded-lg focus-visible:outline-2 transition-[background] p-4 text-sm border-dashed data-[dragging=true]:bg-elevated/25 focus-visible:outline-primary hover:bg-elevated/25" tabindex="0">
    <!--v-if-->
    <div class="flex flex-col items-center justify-center text-center px-4 py-3">Leading slot
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <div class="flex flex-col w-full gap-2">
    <div class="relative text-xs px-2.5 py-1.5 gap-1.5 min-w-0 flex items-center border border-default rounded-md w-full"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><img role="img" src="blob:nodedata:84722326-ccc1-450a-b357-e217cf6c06c2" width="32" height="32" class="h-full w-full rounded-[inherit] object-cover"></span>
      <div class="flex flex-col min-w-0"><span class="text-default truncate">file1.txt</span><span class="text-muted truncate">3B</span></div><button type="button" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors text-sm gap-1.5 text-muted hover:text-default active:text-default disabled:text-muted aria-disabled:text-muted focus:outline-none focus-visible:ring-inset focus-visible:ring-2 focus-visible:ring-inverted p-1.5 ms-auto -mr-1.5">
        <!--v-if-->
        <!--v-if--><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="shrink-0 size-5"></svg>
      </button>
    </div>
  </div><input type="file" accept="*" hidden="">
</div>"
`;

exports[`FileUpload > renders with modelValue correctly 1`] = `
"<div class="relative flex flex-col gap-2 items-start">
  <div role="button" data-dragging="false" class="w-full bg-default border border-default flex flex-col gap-2 items-stretch justify-center rounded-lg focus-visible:outline-2 transition-[background] p-4 text-sm border-dashed data-[dragging=true]:bg-elevated/25 focus-visible:outline-primary hover:bg-elevated/25" tabindex="0">
    <!--v-if-->
    <div class="flex flex-col items-center justify-center text-center px-4 py-3"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="text-muted shrink-0"></svg></span>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <div class="flex flex-col w-full gap-2">
    <div class="relative text-xs px-2.5 py-1.5 gap-1.5 min-w-0 flex items-center border border-default rounded-md w-full"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><img role="img" src="blob:nodedata:f037d2c5-cec0-4c2c-b590-7a77a44b35c4" width="32" height="32" class="h-full w-full rounded-[inherit] object-cover"></span>
      <div class="flex flex-col min-w-0"><span class="text-default truncate">file1.txt</span><span class="text-muted truncate">3B</span></div><button type="button" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors text-sm gap-1.5 text-muted hover:text-default active:text-default disabled:text-muted aria-disabled:text-muted focus:outline-none focus-visible:ring-inset focus-visible:ring-2 focus-visible:ring-inverted p-1.5 ms-auto -mr-1.5">
        <!--v-if-->
        <!--v-if--><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="shrink-0 size-5"></svg>
      </button>
    </div>
  </div><input type="file" accept="*" hidden="">
</div>"
`;

exports[`FileUpload > renders with multiple correctly 1`] = `
"<div class="relative flex flex-col gap-2 items-start">
  <div role="button" data-dragging="false" class="w-full bg-default border border-default flex flex-col gap-2 items-stretch justify-center rounded-lg focus-visible:outline-2 transition-[background] p-4 text-sm border-dashed data-[dragging=true]:bg-elevated/25 focus-visible:outline-primary hover:bg-elevated/25" tabindex="0">
    <!--v-if-->
    <div class="flex flex-col items-center justify-center text-center px-4 py-3"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="text-muted shrink-0"></svg></span>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <div class="flex flex-col w-full gap-2">
    <div class="relative text-xs px-2.5 py-1.5 gap-1.5 min-w-0 flex items-center border border-default rounded-md w-full"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><img role="img" src="blob:nodedata:70524c30-59f8-4e85-91d3-c14e362d49f9" width="32" height="32" class="h-full w-full rounded-[inherit] object-cover"></span>
      <div class="flex flex-col min-w-0"><span class="text-default truncate">file1.txt</span><span class="text-muted truncate">3B</span></div><button type="button" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors text-sm gap-1.5 text-muted hover:text-default active:text-default disabled:text-muted aria-disabled:text-muted focus:outline-none focus-visible:ring-inset focus-visible:ring-2 focus-visible:ring-inverted p-1.5 ms-auto -mr-1.5">
        <!--v-if-->
        <!--v-if--><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="shrink-0 size-5"></svg>
      </button>
    </div>
  </div><input type="file" accept="*" multiple="" hidden="">
</div>"
`;

exports[`FileUpload > renders with name correctly 1`] = `
"<div class="relative flex flex-col gap-2 items-start">
  <div role="button" data-dragging="false" class="w-full bg-default border border-default flex flex-col gap-2 items-stretch justify-center rounded-lg focus-visible:outline-2 transition-[background] p-4 text-sm border-dashed data-[dragging=true]:bg-elevated/25 focus-visible:outline-primary hover:bg-elevated/25" tabindex="0">
    <!--v-if-->
    <div class="flex flex-col items-center justify-center text-center px-4 py-3"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="text-muted shrink-0"></svg></span>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!--v-if--><input type="file" name="name" accept="*" hidden="">
</div>"
`;

exports[`FileUpload > renders with neutral color correctly 1`] = `
"<div class="relative flex flex-col gap-2 items-start">
  <div role="button" data-dragging="false" class="w-full bg-default border border-default flex flex-col gap-2 items-stretch justify-center rounded-lg focus-visible:outline-2 transition-[background] p-4 text-sm border-dashed data-[dragging=true]:bg-elevated/25 focus-visible:outline-inverted hover:bg-elevated/25" tabindex="0">
    <!--v-if-->
    <div class="flex flex-col items-center justify-center text-center px-4 py-3"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="text-muted shrink-0"></svg></span>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!--v-if--><input type="file" accept="*" hidden="">
</div>"
`;

exports[`FileUpload > renders with position inside correctly 1`] = `
"<div class="relative flex flex-col gap-2 items-start">
  <div role="button" data-dragging="false" class="w-full bg-default border border-default flex flex-col gap-2 items-stretch justify-center rounded-lg focus-visible:outline-2 transition-[background] p-4 text-sm border-dashed data-[dragging=true]:bg-elevated/25 focus-visible:outline-primary hover:bg-elevated/25" tabindex="0">
    <div class="flex flex-col w-full gap-2">
      <div class="relative text-xs px-2.5 py-1.5 gap-1.5 min-w-0 flex items-center border border-default rounded-md w-full"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><img role="img" src="blob:nodedata:01ee33cf-9a7e-4e1a-be94-ba559082bffe" width="32" height="32" class="h-full w-full rounded-[inherit] object-cover"></span>
        <div class="flex flex-col min-w-0"><span class="text-default truncate">file1.txt</span><span class="text-muted truncate">3B</span></div><button type="button" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors text-sm gap-1.5 text-muted hover:text-default active:text-default disabled:text-muted aria-disabled:text-muted focus:outline-none focus-visible:ring-inset focus-visible:ring-2 focus-visible:ring-inverted p-1.5 ms-auto -mr-1.5">
          <!--v-if-->
          <!--v-if--><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="shrink-0 size-5"></svg>
        </button>
      </div>
    </div>
    <!--v-if-->
  </div>
  <!--v-if--><input type="file" accept="*" hidden="">
</div>"
`;

exports[`FileUpload > renders with position inside multiple correctly 1`] = `
"<div class="relative flex flex-col gap-2 items-start">
  <div role="button" data-dragging="false" class="w-full bg-default border border-default flex flex-col gap-2 items-stretch justify-center rounded-lg focus-visible:outline-2 transition-[background] p-4 text-sm border-dashed data-[dragging=true]:bg-elevated/25 focus-visible:outline-primary hover:bg-elevated/25" tabindex="0">
    <div class="flex flex-col w-full gap-2">
      <div class="relative text-xs px-2.5 py-1.5 gap-1.5 min-w-0 flex items-center border border-default rounded-md w-full"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><img role="img" src="blob:nodedata:bd4bed90-adc3-4d50-ae90-8b0608445ed6" width="32" height="32" class="h-full w-full rounded-[inherit] object-cover"></span>
        <div class="flex flex-col min-w-0"><span class="text-default truncate">file1.txt</span><span class="text-muted truncate">3B</span></div><button type="button" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors text-sm gap-1.5 text-muted hover:text-default active:text-default disabled:text-muted aria-disabled:text-muted focus:outline-none focus-visible:ring-inset focus-visible:ring-2 focus-visible:ring-inverted p-1.5 ms-auto -mr-1.5">
          <!--v-if-->
          <!--v-if--><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="shrink-0 size-5"></svg>
        </button>
      </div>
    </div>
    <!--v-if-->
  </div>
  <!--v-if--><input type="file" accept="*" multiple="" hidden="">
</div>"
`;

exports[`FileUpload > renders with position outside correctly 1`] = `
"<div class="relative flex flex-col gap-2 items-start">
  <div role="button" data-dragging="false" class="w-full bg-default border border-default flex flex-col gap-2 items-stretch justify-center rounded-lg focus-visible:outline-2 transition-[background] p-4 text-sm border-dashed data-[dragging=true]:bg-elevated/25 focus-visible:outline-primary hover:bg-elevated/25" tabindex="0">
    <!--v-if-->
    <div class="flex flex-col items-center justify-center text-center px-4 py-3"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="text-muted shrink-0"></svg></span>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <div class="flex flex-col w-full gap-2">
    <div class="relative text-xs px-2.5 py-1.5 gap-1.5 min-w-0 flex items-center border border-default rounded-md w-full"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><img role="img" src="blob:nodedata:d603ded6-99ae-41a1-894c-704ce6c40496" width="32" height="32" class="h-full w-full rounded-[inherit] object-cover"></span>
      <div class="flex flex-col min-w-0"><span class="text-default truncate">file1.txt</span><span class="text-muted truncate">3B</span></div><button type="button" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors text-sm gap-1.5 text-muted hover:text-default active:text-default disabled:text-muted aria-disabled:text-muted focus:outline-none focus-visible:ring-inset focus-visible:ring-2 focus-visible:ring-inverted p-1.5 ms-auto -mr-1.5">
        <!--v-if-->
        <!--v-if--><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="shrink-0 size-5"></svg>
      </button>
    </div>
  </div><input type="file" accept="*" hidden="">
</div>"
`;

exports[`FileUpload > renders with position outside multiple correctly 1`] = `
"<div class="relative flex flex-col gap-2 items-start">
  <div role="button" data-dragging="false" class="w-full bg-default border border-default flex flex-col gap-2 items-stretch justify-center rounded-lg focus-visible:outline-2 transition-[background] p-4 text-sm border-dashed data-[dragging=true]:bg-elevated/25 focus-visible:outline-primary hover:bg-elevated/25" tabindex="0">
    <!--v-if-->
    <div class="flex flex-col items-center justify-center text-center px-4 py-3"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="text-muted shrink-0"></svg></span>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <div class="flex flex-col w-full gap-2">
    <div class="relative text-xs px-2.5 py-1.5 gap-1.5 min-w-0 flex items-center border border-default rounded-md w-full"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><img role="img" src="blob:nodedata:205c5b86-725a-4c8f-b365-c56d41a213ee" width="32" height="32" class="h-full w-full rounded-[inherit] object-cover"></span>
      <div class="flex flex-col min-w-0"><span class="text-default truncate">file1.txt</span><span class="text-muted truncate">3B</span></div><button type="button" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors text-sm gap-1.5 text-muted hover:text-default active:text-default disabled:text-muted aria-disabled:text-muted focus:outline-none focus-visible:ring-inset focus-visible:ring-2 focus-visible:ring-inverted p-1.5 ms-auto -mr-1.5">
        <!--v-if-->
        <!--v-if--><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="shrink-0 size-5"></svg>
      </button>
    </div>
  </div><input type="file" accept="*" multiple="" hidden="">
</div>"
`;

exports[`FileUpload > renders with required correctly 1`] = `
"<div class="relative flex flex-col gap-2 items-start">
  <div role="button" data-dragging="false" class="w-full bg-default border border-default flex flex-col gap-2 items-stretch justify-center rounded-lg focus-visible:outline-2 transition-[background] p-4 text-sm border-dashed data-[dragging=true]:bg-elevated/25 focus-visible:outline-primary hover:bg-elevated/25" tabindex="0">
    <!--v-if-->
    <div class="flex flex-col items-center justify-center text-center px-4 py-3"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="text-muted shrink-0"></svg></span>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!--v-if--><input type="file" accept="*" required="" hidden="">
</div>"
`;

exports[`FileUpload > renders with required correctly 2`] = `
"<div class="relative flex flex-col gap-2 items-start">
  <div role="button" data-dragging="false" class="w-full bg-default border border-default flex flex-col gap-2 items-stretch justify-center rounded-lg focus-visible:outline-2 transition-[background] p-4 text-sm border-dashed data-[dragging=true]:bg-elevated/25 focus-visible:outline-primary hover:bg-elevated/25" tabindex="0">
    <!--v-if-->
    <div class="flex flex-col items-center justify-center text-center px-4 py-3"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="text-muted shrink-0"></svg></span>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!--v-if--><input type="file" accept="*" required="" hidden="">
</div>"
`;

exports[`FileUpload > renders with size lg correctly 1`] = `
"<div class="relative flex flex-col gap-2 items-start">
  <div role="button" data-dragging="false" class="w-full bg-default border border-default flex flex-col gap-2 items-stretch justify-center rounded-lg focus-visible:outline-2 transition-[background] p-4 text-sm border-dashed data-[dragging=true]:bg-elevated/25 focus-visible:outline-primary hover:bg-elevated/25" tabindex="0">
    <!--v-if-->
    <div class="flex flex-col items-center justify-center text-center px-4 py-3"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-9 text-lg shrink-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="text-muted shrink-0"></svg></span>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <div class="flex flex-col w-full gap-2">
    <div class="relative text-sm px-3 py-2 gap-2 min-w-0 flex items-center border border-default rounded-md w-full"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-9 text-lg shrink-0"><img role="img" src="blob:nodedata:6d258674-1de9-4456-a9f0-a7369411a5ce" width="36" height="36" class="h-full w-full rounded-[inherit] object-cover"></span>
      <div class="flex flex-col min-w-0"><span class="text-default truncate">file1.txt</span><span class="text-muted truncate text-xs">3B</span></div><button type="button" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors text-sm gap-2 text-muted hover:text-default active:text-default disabled:text-muted aria-disabled:text-muted focus:outline-none focus-visible:ring-inset focus-visible:ring-2 focus-visible:ring-inverted p-2 ms-auto -mr-2">
        <!--v-if-->
        <!--v-if--><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="shrink-0 size-5"></svg>
      </button>
    </div>
  </div><input type="file" accept="*" hidden="">
</div>"
`;

exports[`FileUpload > renders with size lg variant button correctly 1`] = `
"<div class="relative">
  <div role="button" data-dragging="false" class="w-full bg-default border border-default flex flex-col gap-2 items-stretch justify-center rounded-lg focus-visible:outline-2 transition-[background] text-sm border-dashed data-[dragging=true]:bg-elevated/25 focus-visible:outline-primary p-2 hover:bg-elevated/25" tabindex="0">
    <!--v-if-->
    <div class="flex flex-col items-center justify-center text-center"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="shrink-0 size-5"></svg>
      <!--v-if-->
    </div>
  </div>
  <div class="">
    <div class="text-sm gap-2 absolute inset-0 p-0"><span class="inline-flex items-center justify-center select-none align-middle bg-elevated text-lg shrink-0 size-full rounded-lg"><img role="img" src="blob:nodedata:3efd46e5-d7c0-4642-8a57-c0df16aa9bf1" width="36" height="36" class="h-full w-full rounded-[inherit] object-cover"></span>
      <div class="flex-col min-w-0 hidden"><span class="text-default truncate">file1.txt</span><span class="text-muted truncate text-xs">3B</span></div><button type="button" class="font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors text-xs gap-1 text-inverted bg-inverted hover:bg-inverted/90 active:bg-inverted/90 disabled:bg-inverted aria-disabled:bg-inverted focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-inverted absolute -top-1.5 -right-1.5 p-0 rounded-full border-2 border-bg">
        <!--v-if-->
        <!--v-if--><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="shrink-0 size-4"></svg>
      </button>
    </div>
  </div><input type="file" accept="*" hidden="">
</div>"
`;

exports[`FileUpload > renders with size md correctly 1`] = `
"<div class="relative flex flex-col gap-2 items-start">
  <div role="button" data-dragging="false" class="w-full bg-default border border-default flex flex-col gap-2 items-stretch justify-center rounded-lg focus-visible:outline-2 transition-[background] p-4 text-sm border-dashed data-[dragging=true]:bg-elevated/25 focus-visible:outline-primary hover:bg-elevated/25" tabindex="0">
    <!--v-if-->
    <div class="flex flex-col items-center justify-center text-center px-4 py-3"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="text-muted shrink-0"></svg></span>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <div class="flex flex-col w-full gap-2">
    <div class="relative text-xs px-2.5 py-1.5 gap-1.5 min-w-0 flex items-center border border-default rounded-md w-full"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><img role="img" src="blob:nodedata:094e674d-708e-4b7c-9cde-04094466e337" width="32" height="32" class="h-full w-full rounded-[inherit] object-cover"></span>
      <div class="flex flex-col min-w-0"><span class="text-default truncate">file1.txt</span><span class="text-muted truncate">3B</span></div><button type="button" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors text-sm gap-1.5 text-muted hover:text-default active:text-default disabled:text-muted aria-disabled:text-muted focus:outline-none focus-visible:ring-inset focus-visible:ring-2 focus-visible:ring-inverted p-1.5 ms-auto -mr-1.5">
        <!--v-if-->
        <!--v-if--><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="shrink-0 size-5"></svg>
      </button>
    </div>
  </div><input type="file" accept="*" hidden="">
</div>"
`;

exports[`FileUpload > renders with size md variant button correctly 1`] = `
"<div class="relative">
  <div role="button" data-dragging="false" class="w-full bg-default border border-default flex flex-col gap-2 items-stretch justify-center rounded-lg focus-visible:outline-2 transition-[background] text-sm border-dashed data-[dragging=true]:bg-elevated/25 focus-visible:outline-primary p-1.5 hover:bg-elevated/25" tabindex="0">
    <!--v-if-->
    <div class="flex flex-col items-center justify-center text-center"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="shrink-0 size-5"></svg>
      <!--v-if-->
    </div>
  </div>
  <div class="">
    <div class="text-xs gap-1.5 absolute inset-0 p-0"><span class="inline-flex items-center justify-center select-none align-middle bg-elevated text-base shrink-0 size-full rounded-lg"><img role="img" src="blob:nodedata:f5d4f74c-dd45-4d85-a48c-da1667e56ca5" width="32" height="32" class="h-full w-full rounded-[inherit] object-cover"></span>
      <div class="flex-col min-w-0 hidden"><span class="text-default truncate">file1.txt</span><span class="text-muted truncate">3B</span></div><button type="button" class="font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors text-xs gap-1 text-inverted bg-inverted hover:bg-inverted/90 active:bg-inverted/90 disabled:bg-inverted aria-disabled:bg-inverted focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-inverted absolute -top-1.5 -right-1.5 p-0 rounded-full border-2 border-bg">
        <!--v-if-->
        <!--v-if--><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="shrink-0 size-4"></svg>
      </button>
    </div>
  </div><input type="file" accept="*" hidden="">
</div>"
`;

exports[`FileUpload > renders with size sm correctly 1`] = `
"<div class="relative flex flex-col gap-2 items-start">
  <div role="button" data-dragging="false" class="w-full bg-default border border-default flex flex-col gap-2 items-stretch justify-center rounded-lg focus-visible:outline-2 transition-[background] p-4 text-xs border-dashed data-[dragging=true]:bg-elevated/25 focus-visible:outline-primary hover:bg-elevated/25" tabindex="0">
    <!--v-if-->
    <div class="flex flex-col items-center justify-center text-center px-4 py-3"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-7 text-sm shrink-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="text-muted shrink-0"></svg></span>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <div class="flex flex-col w-full gap-2">
    <div class="relative text-xs px-2.5 py-1.5 gap-1.5 min-w-0 flex items-center border border-default rounded-md w-full"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-7 text-sm shrink-0"><img role="img" src="blob:nodedata:ab7def08-ca24-40d4-aaef-e3a35f8bff49" width="28" height="28" class="h-full w-full rounded-[inherit] object-cover"></span>
      <div class="flex min-w-0 flex-row gap-1"><span class="text-default truncate">file1.txt</span><span class="text-muted truncate">3B</span></div><button type="button" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors text-xs gap-1.5 text-muted hover:text-default active:text-default disabled:text-muted aria-disabled:text-muted focus:outline-none focus-visible:ring-inset focus-visible:ring-2 focus-visible:ring-inverted p-1.5 ms-auto -mr-1.5">
        <!--v-if-->
        <!--v-if--><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="shrink-0 size-4"></svg>
      </button>
    </div>
  </div><input type="file" accept="*" hidden="">
</div>"
`;

exports[`FileUpload > renders with size sm variant button correctly 1`] = `
"<div class="relative">
  <div role="button" data-dragging="false" class="w-full bg-default border border-default flex flex-col gap-2 items-stretch justify-center rounded-lg focus-visible:outline-2 transition-[background] text-xs border-dashed data-[dragging=true]:bg-elevated/25 focus-visible:outline-primary p-1.5 hover:bg-elevated/25" tabindex="0">
    <!--v-if-->
    <div class="flex flex-col items-center justify-center text-center"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="shrink-0 size-4"></svg>
      <!--v-if-->
    </div>
  </div>
  <div class="">
    <div class="text-xs gap-1.5 absolute inset-0 p-0"><span class="inline-flex items-center justify-center select-none align-middle bg-elevated text-sm shrink-0 size-full rounded-lg"><img role="img" src="blob:nodedata:e64e411c-0736-4479-8c36-e59e6e7f471e" width="28" height="28" class="h-full w-full rounded-[inherit] object-cover"></span>
      <div class="min-w-0 flex-row gap-1 hidden"><span class="text-default truncate">file1.txt</span><span class="text-muted truncate">3B</span></div><button type="button" class="font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors text-xs gap-1 text-inverted bg-inverted hover:bg-inverted/90 active:bg-inverted/90 disabled:bg-inverted aria-disabled:bg-inverted focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-inverted absolute -top-1.5 -right-1.5 p-0 rounded-full border-2 border-bg">
        <!--v-if-->
        <!--v-if--><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="shrink-0 size-4"></svg>
      </button>
    </div>
  </div><input type="file" accept="*" hidden="">
</div>"
`;

exports[`FileUpload > renders with size xl correctly 1`] = `
"<div class="relative flex flex-col gap-2 items-start">
  <div role="button" data-dragging="false" class="w-full bg-default border border-default flex flex-col gap-2 items-stretch justify-center rounded-lg focus-visible:outline-2 transition-[background] p-4 text-base border-dashed data-[dragging=true]:bg-elevated/25 focus-visible:outline-primary hover:bg-elevated/25" tabindex="0">
    <!--v-if-->
    <div class="flex flex-col items-center justify-center text-center px-4 py-3"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-10 text-xl shrink-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="text-muted shrink-0"></svg></span>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <div class="flex flex-col w-full gap-2">
    <div class="relative text-sm px-3 py-2 gap-2 min-w-0 flex items-center border border-default rounded-md w-full"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-10 text-xl shrink-0"><img role="img" src="blob:nodedata:e60cd53e-c2b8-4351-8984-f101ea6b47b6" width="40" height="40" class="h-full w-full rounded-[inherit] object-cover"></span>
      <div class="flex flex-col min-w-0"><span class="text-default truncate">file1.txt</span><span class="text-muted truncate">3B</span></div><button type="button" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors text-base gap-2 text-muted hover:text-default active:text-default disabled:text-muted aria-disabled:text-muted focus:outline-none focus-visible:ring-inset focus-visible:ring-2 focus-visible:ring-inverted p-2 ms-auto -mr-2">
        <!--v-if-->
        <!--v-if--><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="shrink-0 size-6"></svg>
      </button>
    </div>
  </div><input type="file" accept="*" hidden="">
</div>"
`;

exports[`FileUpload > renders with size xl variant button correctly 1`] = `
"<div class="relative">
  <div role="button" data-dragging="false" class="w-full bg-default border border-default flex flex-col gap-2 items-stretch justify-center rounded-lg focus-visible:outline-2 transition-[background] text-base border-dashed data-[dragging=true]:bg-elevated/25 focus-visible:outline-primary p-2 hover:bg-elevated/25" tabindex="0">
    <!--v-if-->
    <div class="flex flex-col items-center justify-center text-center"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="shrink-0 size-6"></svg>
      <!--v-if-->
    </div>
  </div>
  <div class="">
    <div class="text-sm gap-2 absolute inset-0 p-0"><span class="inline-flex items-center justify-center select-none align-middle bg-elevated text-xl shrink-0 size-full rounded-lg"><img role="img" src="blob:nodedata:d56a43fd-c36c-483f-a982-ea2554b464ae" width="40" height="40" class="h-full w-full rounded-[inherit] object-cover"></span>
      <div class="flex-col min-w-0 hidden"><span class="text-default truncate">file1.txt</span><span class="text-muted truncate">3B</span></div><button type="button" class="font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors text-xs gap-1 text-inverted bg-inverted hover:bg-inverted/90 active:bg-inverted/90 disabled:bg-inverted aria-disabled:bg-inverted focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-inverted absolute -top-1.5 -right-1.5 p-0 rounded-full border-2 border-bg">
        <!--v-if-->
        <!--v-if--><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="shrink-0 size-4"></svg>
      </button>
    </div>
  </div><input type="file" accept="*" hidden="">
</div>"
`;

exports[`FileUpload > renders with size xs correctly 1`] = `
"<div class="relative flex flex-col gap-2 items-start">
  <div role="button" data-dragging="false" class="w-full bg-default border border-default flex flex-col gap-2 items-stretch justify-center rounded-lg focus-visible:outline-2 transition-[background] p-4 text-xs border-dashed data-[dragging=true]:bg-elevated/25 focus-visible:outline-primary hover:bg-elevated/25" tabindex="0">
    <!--v-if-->
    <div class="flex flex-col items-center justify-center text-center px-4 py-3"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-6 text-xs shrink-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="text-muted shrink-0"></svg></span>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <div class="flex flex-col w-full gap-2">
    <div class="relative text-xs px-2 py-1 gap-1 min-w-0 flex items-center border border-default rounded-md w-full"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-6 text-xs shrink-0"><img role="img" src="blob:nodedata:af0e4453-ceba-4b79-b2ad-b02b83bc896b" width="24" height="24" class="h-full w-full rounded-[inherit] object-cover"></span>
      <div class="flex min-w-0 flex-row gap-1"><span class="text-default truncate">file1.txt</span><span class="text-muted truncate">3B</span></div><button type="button" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors text-xs gap-1 text-muted hover:text-default active:text-default disabled:text-muted aria-disabled:text-muted focus:outline-none focus-visible:ring-inset focus-visible:ring-2 focus-visible:ring-inverted p-1 ms-auto -mr-1">
        <!--v-if-->
        <!--v-if--><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="shrink-0 size-4"></svg>
      </button>
    </div>
  </div><input type="file" accept="*" hidden="">
</div>"
`;

exports[`FileUpload > renders with size xs variant button correctly 1`] = `
"<div class="relative">
  <div role="button" data-dragging="false" class="w-full bg-default border border-default flex flex-col gap-2 items-stretch justify-center rounded-lg focus-visible:outline-2 transition-[background] text-xs border-dashed data-[dragging=true]:bg-elevated/25 focus-visible:outline-primary p-1 hover:bg-elevated/25" tabindex="0">
    <!--v-if-->
    <div class="flex flex-col items-center justify-center text-center"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="shrink-0 size-4"></svg>
      <!--v-if-->
    </div>
  </div>
  <div class="">
    <div class="text-xs gap-1 absolute inset-0 p-0"><span class="inline-flex items-center justify-center select-none align-middle bg-elevated text-xs shrink-0 size-full rounded-lg"><img role="img" src="blob:nodedata:d99638c0-9cc6-443b-bbd3-c60ef1055f06" width="24" height="24" class="h-full w-full rounded-[inherit] object-cover"></span>
      <div class="min-w-0 flex-row gap-1 hidden"><span class="text-default truncate">file1.txt</span><span class="text-muted truncate">3B</span></div><button type="button" class="font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors text-xs gap-1 text-inverted bg-inverted hover:bg-inverted/90 active:bg-inverted/90 disabled:bg-inverted aria-disabled:bg-inverted focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-inverted absolute -top-1.5 -right-1.5 p-0 rounded-full border-2 border-bg">
        <!--v-if-->
        <!--v-if--><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="shrink-0 size-4"></svg>
      </button>
    </div>
  </div><input type="file" accept="*" hidden="">
</div>"
`;

exports[`FileUpload > renders with ui correctly 1`] = `
"<div class="relative flex flex-col gap-2 items-start">
  <div role="button" data-dragging="false" class="w-full bg-default border border-default flex flex-col gap-2 items-stretch justify-center focus-visible:outline-2 transition-[background] p-4 text-sm border-dashed data-[dragging=true]:bg-elevated/25 focus-visible:outline-primary hover:bg-elevated/25 rounded-xl" tabindex="0">
    <!--v-if-->
    <div class="flex flex-col items-center justify-center text-center px-4 py-3"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="text-muted shrink-0"></svg></span>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!--v-if--><input type="file" accept="*" hidden="">
</div>"
`;

exports[`FileUpload > renders with variant area correctly 1`] = `
"<div class="relative flex flex-col gap-2 items-start">
  <div role="button" data-dragging="false" class="w-full bg-default border border-default flex flex-col gap-2 items-stretch justify-center rounded-lg focus-visible:outline-2 transition-[background] p-4 text-sm border-dashed data-[dragging=true]:bg-elevated/25 focus-visible:outline-primary hover:bg-elevated/25" tabindex="0">
    <!--v-if-->
    <div class="flex flex-col items-center justify-center text-center px-4 py-3"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="text-muted shrink-0"></svg></span>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <div class="flex flex-col w-full gap-2">
    <div class="relative text-xs px-2.5 py-1.5 gap-1.5 min-w-0 flex items-center border border-default rounded-md w-full"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><img role="img" src="blob:nodedata:dde3ff39-6103-431a-b70b-9d1d071b2cbe" width="32" height="32" class="h-full w-full rounded-[inherit] object-cover"></span>
      <div class="flex flex-col min-w-0"><span class="text-default truncate">file1.txt</span><span class="text-muted truncate">3B</span></div><button type="button" class="rounded-md font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors text-sm gap-1.5 text-muted hover:text-default active:text-default disabled:text-muted aria-disabled:text-muted focus:outline-none focus-visible:ring-inset focus-visible:ring-2 focus-visible:ring-inverted p-1.5 ms-auto -mr-1.5">
        <!--v-if-->
        <!--v-if--><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="shrink-0 size-5"></svg>
      </button>
    </div>
  </div><input type="file" accept="*" hidden="">
</div>"
`;

exports[`FileUpload > renders with variant button correctly 1`] = `
"<div class="relative">
  <div role="button" data-dragging="false" class="w-full bg-default border border-default flex flex-col gap-2 items-stretch justify-center rounded-lg focus-visible:outline-2 transition-[background] text-sm border-dashed data-[dragging=true]:bg-elevated/25 focus-visible:outline-primary p-1.5 hover:bg-elevated/25" tabindex="0">
    <!--v-if-->
    <div class="flex flex-col items-center justify-center text-center"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="shrink-0 size-5"></svg>
      <!--v-if-->
    </div>
  </div>
  <div class="">
    <div class="text-xs gap-1.5 absolute inset-0 p-0"><span class="inline-flex items-center justify-center select-none align-middle bg-elevated text-base shrink-0 size-full rounded-lg"><img role="img" src="blob:nodedata:2f8e809c-116e-49df-a4e4-7c79569cd409" width="32" height="32" class="h-full w-full rounded-[inherit] object-cover"></span>
      <div class="flex-col min-w-0 hidden"><span class="text-default truncate">file1.txt</span><span class="text-muted truncate">3B</span></div><button type="button" class="font-medium inline-flex items-center disabled:cursor-not-allowed aria-disabled:cursor-not-allowed disabled:opacity-75 aria-disabled:opacity-75 transition-colors text-xs gap-1 text-inverted bg-inverted hover:bg-inverted/90 active:bg-inverted/90 disabled:bg-inverted aria-disabled:bg-inverted focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-inverted absolute -top-1.5 -right-1.5 p-0 rounded-full border-2 border-bg">
        <!--v-if-->
        <!--v-if--><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="shrink-0 size-4"></svg>
      </button>
    </div>
  </div><input type="file" accept="*" hidden="">
</div>"
`;

exports[`FileUpload > renders without dropzone correctly 1`] = `
"<div class="relative flex flex-col gap-2 items-start">
  <div role="button" data-dragging="false" class="w-full bg-default border border-default flex flex-col gap-2 items-stretch justify-center rounded-lg focus-visible:outline-2 transition-[background] p-4 text-sm focus-visible:outline-primary hover:bg-elevated/25" tabindex="0">
    <!--v-if-->
    <div class="flex flex-col items-center justify-center text-center px-4 py-3"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="text-muted shrink-0"></svg></span>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!--v-if--><input type="file" accept="*" hidden="">
</div>"
`;

exports[`FileUpload > renders without interactive correctly 1`] = `
"<div class="relative flex flex-col gap-2 items-start">
  <div role="button" data-dragging="false" class="w-full bg-default border border-default flex flex-col gap-2 items-stretch justify-center rounded-lg focus-visible:outline-2 transition-[background] p-4 text-sm border-dashed data-[dragging=true]:bg-elevated/25 focus-visible:outline-primary" tabindex="0">
    <!--v-if-->
    <div class="flex flex-col items-center justify-center text-center px-4 py-3"><span class="inline-flex items-center justify-center select-none rounded-full align-middle bg-elevated size-8 text-base shrink-0"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" width="1em" height="1em" viewBox="0 0 16 16" class="text-muted shrink-0"></svg></span>
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!--v-if--><input type="file" accept="*" hidden="">
</div>"
`;
